Updated survey questions.

--- a/public/home.html
+++ b/public/home.html
@@ -12,7 +12,10 @@
 
 <body>
     <h1>Home Page</h1>
-    <div class="container"></div>
+    <div class="container">
+<a href="http://localhost:8080/survey">Take Our Survey!</a>
+
+    </div>
 
     <script type="text/javascript">
         $.get("/api/friends", function (data) {
