--- a/public/friends.html
+++ b/public/friends.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Friend List</title>
     <script src="https://code.jquery.com/jquery.js"></script>
 
 </head>
 
 <body>
-    <h1>All Friends</h1>
-  
+    <a href="./home.html"><img class="container" src="img/logo_header.png"></a>
+
+    <h1 class="container">All Friends</h1>
+
     <div class="container">
         <a href="./home.html">Back Home</a>
 
