--- a/public/home.html
+++ b/public/home.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Friend Finder</title>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
 
 </head>
 
 <body>
-    <h1>Home Page</h1>
-
-    <img src="img/logo_header.png">
+    <img class="container" src="img/logo_header.png">
 
 
     <div class="container">
         <a href="./survey.html">Take Our Survey!</a>
 
     </div>
-
+<br>
     <div class="container">
         <a href="./friends.html">View All Friends</a>
 
