--- a/public/home.html
+++ b/public/home.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <img class="container" src="img/logo_header.png">
+    <img class="logo_container" src="img/logo_header.png" style="width:100%">
 
 
     <div class="container">
