--- a/public/survey.html
+++ b/public/survey.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <a href="./home.html"><img class="container" src="img/logo_header.png"></a>
+    <a href="./home.html"> <img class="logo_container" src="img/logo_header.png" style="width:100%">
+    </a>
 
     <form>
         <label for="">Name: </label>
@@ -32,7 +33,7 @@
             <input type="radio" id="q1" value="3">Fall<br>
             <input type="radio" id="q1" value="4">Winter<br>
         </div>
-      
+
         <div class="questionBox">
             What's Your Favorite Pokemon?<br>
             <input type="radio" id="q2" value="1">Pikachu<br>
@@ -104,7 +105,7 @@
             <input type="radio" id="q10" value="5">New York Style<br>
         </div>
         <div class="submitBox">
-        <button type="submit" id="submit">Find Your Match!</button>
+            <button type="submit" id="submit">Find Your Match!</button>
         </div>
     </form>
 </body>
